OO-7504: rework course archive